Feature_delete-service-item-and-favorite-and-update-Swagger
